--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&display=swap');
 
 * {
   margin: 0;
@@ -35,14 +35,22 @@ header > h1 {
 }
 
 .choices {
-  margin: 50px 0;
-  background-color: white;
-  width: 400px;
+  margin-top: 50px;
   text-align: center;
 }
-
+ 
 .choice {
+  border: 4px solid white;
+  border-radius: 50%;
+  padding: 10px;
+  margin: 0 20px;
   display: inline-block;
+  transition: all 0.3s ease;
+}
+
+.choice:hover {
+  cursor: pointer;
+  box-shadow:  0 5px 15px red;
 }
 
 .badge {
@@ -74,6 +82,15 @@ header > h1 {
   text-align: center;
   font-family: Asap, sans-serif;
   font-weight: bold;
+}
+
+#action-message {
+  margin-top: 20px;
+  text-align: center;
+  color: white;
+  font-family: Asap, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 
