--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ header > h1 {
 
 .choice:hover {
   cursor: pointer;
-  box-shadow:  0 5px 15px red;
+  box-shadow:  0 5px 15px purple;
 }
 
 .badge {
@@ -93,6 +93,20 @@ header > h1 {
   font-size: 20px;
 }
 
+.green-glow {
+  border: 4px solid #4dcc7d;
+  box-shadow: 0 0 10px #31b43a;
+}
+
+.red-glow {
+  border: 4px solid #fc121b;
+  box-shadow: 0 0 10px #d01115;
+}
+
+.gray-glow {
+  border: 4px solid #464647;
+  box-shadow: 0 0 10px #25292b;
+}
 
 
 
